--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,6 +15,20 @@ body {
 	height: auto;
 	max-height:100%; 
 }
+span{
+	font-size: 20px;
+	font-weight: bold;
+}
+
+.weather{
+	background: rgba(211, 211, 211, 0);
+}
+
+.txt{
+	color:black;
+	font-size: 20px;
+	font-weight:normal;
+}
 
 img {
 	/*margin-right: 10px;*/
@@ -36,5 +50,5 @@ img {
 }
 
 p {
-	color: gray;
+	color: rgba(0, 0, 0, 0.529);
 }
