--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,10 @@
 /*GifTastic CSS*/
-
+.navbar {
+	margin-bottom: 0;
+}
 body {
 	background-color: white;
 }
-
 .vp{
 	width: 80vw;
 	height:80vh;
@@ -18,6 +19,14 @@ body {
 span{
 	font-size: 20px;
 	font-weight: bold;
+}
+
+h1{
+	color:black;
+}
+
+#p{
+	color:black;
 }
 
 .weather{
@@ -51,4 +60,8 @@ img {
 
 p {
 	color: rgba(0, 0, 0, 0.529);
+}
+
+input{
+    text-transform: capitalize;
 }
